# datool

./: .gitignore  LICENSE  README.md  datool.py  pyproject.toml
templates/.github/workflows/: participation.yml
